add video fullscreen but issue with unmuting the video

--- a/style/DCNV_css.css
+++ b/style/DCNV_css.css
@@ -9,19 +9,30 @@ body {
 .container { 
     padding-top: 80px;
     width: 100%;
+    padding-left: 300px;
+    padding-right: 300px;
+}
+
+.def {
+    padding-top: 50px
 }
 
 h1 {
+    padding-top: 80px;
     color: white;
     text-align:center;
     margin-top: 80px;
 
 }
 
-#abc {
+footer {
+    color: white;
+}
+
+#par_white_center {
   text-align: center;
-  color:rgb(255, 251, 238);
-  font-size: 2em
+  color:white;
+  font-size: 1.8em
 }
 
 .link {
@@ -31,3 +42,40 @@ h1 {
 }
 
 a { color: inherit; } 
+
+
+/* Style the video: 100% width and height to cover the entire window */
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
+  
+  /* Add some content at the bottom of the video/page */
+  .content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+  }
+  
+  /* Style the button used to pause/play the video */
+  #myBtn {
+    width: 200px;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+  }
+  
+  #myBtn:hover {
+    background: #ddd;
+    color: black;
+  }
+  
