--- a/style/DCNV_css.css
+++ b/style/DCNV_css.css
@@ -4,17 +4,16 @@ html {
   
 body {
     background-color: rgb(126, 145, 131);
+    margin: 0px;
+    height: 100%;
 }
 
 .container { 
     padding-top: 80px;
-    width: 100%;
-    padding-left: 300px;
-    padding-right: 300px;
-}
-
-.def {
-    padding-top: 50px
+    height:100%;
+    text-align: center;
+    color:white;
+    font-size: 1.4em
 }
 
 h1 {
@@ -25,14 +24,15 @@ h1 {
 
 }
 
-footer {
-    color: white;
-}
-
-#par_white_center {
-  text-align: center;
-  color:white;
-  font-size: 1.8em
+.footer {
+  color: white;
+  text-align:center;
+  bottom:0;
+	left:0;
+	position:relative;
+  width: 100%;
+  height: 2em;
+	background: #3A3A3A;
 }
 
 .link {
@@ -46,36 +46,9 @@ a { color: inherit; }
 
 /* Style the video: 100% width and height to cover the entire window */
 #myVideo {
-    position: fixed;
+    position: absolute;
     right: 0;
     bottom: 0;
     min-width: 100%;
-    min-height: 100%;
+    min-height: 95%;
   }
-  
-  /* Add some content at the bottom of the video/page */
-  .content {
-    position: fixed;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
-    padding: 20px;
-  }
-  
-  /* Style the button used to pause/play the video */
-  #myBtn {
-    width: 200px;
-    font-size: 18px;
-    padding: 10px;
-    border: none;
-    background: #000;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  #myBtn:hover {
-    background: #ddd;
-    color: black;
-  }
-  
