--- a/style/DCNV_css.css
+++ b/style/DCNV_css.css
@@ -1,54 +1,47 @@
 html {
-    height: 100%;
+  height : 100%;
 }
   
 body {
-    background-color: rgb(126, 145, 131);
-    margin: 0px;
-    height: 100%;
+  background-color : rgb(126, 145, 131);
+  margin : 0;
+  height : 100%;
 }
-
-.container { 
-    padding-top: 80px;
-    height:100%;
-    text-align: center;
-    color:white;
-    font-size: 1.4em
+  
+.container {
+  padding-top : 80px;
+  height : 100%;
+  text-align : center;
+  color : white;
+  font-size : 1.4em;
 }
-
+  
 h1 {
-    padding-top: 80px;
-    color: white;
-    text-align:center;
-    margin-top: 80px;
-
+  padding-top : 80px;
+  color : white;
+  text-align : center;
+  margin-top : 80px;
 }
-
+  
 .footer {
-  color: white;
-  text-align:center;
-  bottom:0;
-	left:0;
-	position:relative;
-  width: 100%;
-  height: 2em;
-	background: #3A3A3A;
+  color : white;
+  text-align : center;
+  bottom : 0;
+  left : 0;
+  position : relative;
+  width : 100%;
+  height : 2em;
+  background : #3A3A3A;
 }
 
-.link {
-   color:rgb(61, 87, 68);
-   text-decoration: none; 
-   background-color: none;
+a {
+  color : inherit;
 }
-
-a { color: inherit; } 
-
-
-/* Style the video: 100% width and height to cover the entire window */
+  
 #myVideo {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 95%;
-  }
+  position : absolute;
+  right : 0;
+  bottom : 0;
+  min-width : 100%;
+  min-height : 95%;
+}
